--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
     modImplementation "com.cobblemon:mod:$rootProject.cobblemon_version"
     modImplementation "com.terraformersmc:modmenu:11.0.3"
+    modImplementation "curse.maven:cobblemon-mega-showdown-1189523:6951008"
     modImplementation "maven.modrinth:jade:$rootProject.jade_version+neoforge"
     modImplementation "software.bernie.geckolib:geckolib-common-$rootProject.geckolib_version"
 
