--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -38,6 +38,10 @@ repositories {
         name = "Terraformers"
         url = "https://maven.terraformersmc.com/"
     }
+    maven {
+        name = "Ladysnake Libs"
+        url = "https://maven.ladysnake.org/releases"
+    }
     mavenCentral()
 }
 
@@ -51,6 +55,9 @@ dependencies {
 
     modImplementation "com.terraformersmc:modmenu:11.0.3"
     modRuntimeOnly "maven.modrinth:jade:$rootProject.jade_version+fabric"
+    modRuntimeOnly "dev.emi:trinkets:3.10.0"
+    modImplementation "curse.maven:cobblemon-mega-showdown-1189523:6951008"
+    modRuntimeOnly "maven.modrinth:supermartijn642s-config-lib:1.1.8-fabric-mc1.21"
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
