--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -69,6 +69,7 @@ processResources {
         version: project.version,
         minecraft_version: rootProject.minecraft_version,
         cobblemon_version: rootProject.cobblemon_dependency,
+        geckolib_version: rootProject.geckolib_dependency,
         neoforge_version: rootProject.neoforge_version
     ]
     inputs.properties replaceProperties
