--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 display_name=Cobblemon Raid Dens
 mod_description=Introduces raid dens to Minecraft!
 archives_name=cobblemonraiddens
-mod_version=0.1.0+1.21.1
+mod_version=0.2.0+1.21.1
 maven_group=com.necro.raid.dens
 enabled_platforms=fabric,neoforge
 
@@ -26,3 +26,4 @@ geckolib_version=1.21.1:4.7.7
 
 # Mod Required Dependencies
 cobblemon_dependency=1.6.0
+geckolib_dependency=4.7.0
