--- a/fabricdatagen/build.gradle
+++ b/fabricdatagen/build.gradle
@@ -45,6 +45,15 @@ repositories {
             includeGroup "curse.maven"
         }
     }
+    maven {
+        name = "Terraformers"
+        url = "https://maven.terraformersmc.com/"
+    }
+    maven {
+        name = "Ladysnake Libs"
+        url = "https://maven.ladysnake.org/releases"
+    }
+    mavenCentral()
 }
 
 dependencies {
@@ -54,6 +63,9 @@ dependencies {
     modImplementation "com.cobblemon:fabric:$rootProject.cobblemon_version"
     modImplementation "software.bernie.geckolib:geckolib-fabric-$rootProject.geckolib_version"
     include(modApi "me.shedaniel.cloth:cloth-config-fabric:$rootProject.cloth_config_version")
+    modImplementation "dev.emi:trinkets:3.10.0"
+    modImplementation "curse.maven:cobblemon-mega-showdown-1189523:6951008"
+    modImplementation "maven.modrinth:supermartijn642s-config-lib:1.1.8-fabric-mc1.21"
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
