--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     modRuntimeOnly "dev.emi:trinkets:3.10.0"
     modImplementation "curse.maven:cobblemon-mega-showdown-1189523:6951008"
     modRuntimeOnly "maven.modrinth:supermartijn642s-config-lib:1.1.8-fabric-mc1.21"
+    modImplementation "curse.maven:distant-horizons-508933:6791190"
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
