--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -29,7 +29,7 @@ loom {
 
 repositories {
     maven {
-        url "https://www.cursemaven.com"
+        url = "https://www.cursemaven.com"
         content {
             includeGroup "curse.maven"
         }
@@ -58,9 +58,9 @@ dependencies {
     modRuntimeOnly "dev.emi:trinkets:3.10.0"
     modImplementation "curse.maven:cobblemon-mega-showdown-1189523:6951008"
     modRuntimeOnly "maven.modrinth:supermartijn642s-config-lib:1.1.8-fabric-mc1.21"
-    modImplementation "curse.maven:distant-horizons-508933:6791190"
+    modCompileOnly "curse.maven:distant-horizons-508933:6791190"
 
-    common(project(path: ':common', configuration: 'namedElements')) { transitive false }
+    common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
 }
 
