--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -33,7 +33,7 @@ repositories {
         url = 'https://maven.neoforged.net/releases'
     }
     maven {
-        url "https://www.cursemaven.com"
+        url = "https://www.cursemaven.com"
         content {
             includeGroup "curse.maven"
         }
@@ -56,9 +56,9 @@ dependencies {
     modRuntimeOnly "maven.modrinth:jade:$rootProject.jade_version+neoforge"
     modRuntimeOnly "top.theillusivec4.curios:curios-neoforge:9.2.2+1.21.1"
     modImplementation "curse.maven:cobblemon-mega-showdown-1189523:6951007"
-    modImplementation "curse.maven:distant-horizons-508933:6791190"
+    modCompileOnly "curse.maven:distant-horizons-508933:6791190"
 
-    common(project(path: ':common', configuration: 'namedElements')) { transitive false }
+    common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
     shadowBundle project(path: ':common', configuration: 'transformProductionNeoForge')
 }
 
