--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ neoforge_version=21.1.130
 kotlin_for_forge_version=5.3.0
 
 cobblemon_version=1.6.1+1.21.1
+molang_version=1.1.19
 cloth_config_version=15.0.140
 jade_version=15.10.0
 geckolib_version=1.21.1:4.7.7
