--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,9 +23,10 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
     modImplementation "com.cobblemon:mod:$rootProject.cobblemon_version"
     implementation(files "../lib/common/molang-1.1.19.jar")
-    modImplementation "com.terraformersmc:modmenu:11.0.3"
-    modImplementation "curse.maven:cobblemon-mega-showdown-1189523:6951008"
-    modImplementation "maven.modrinth:jade:$rootProject.jade_version+neoforge"
+    modCompileOnly "com.terraformersmc:modmenu:11.0.3"
+    modCompileOnly "curse.maven:cobblemon-mega-showdown-1189523:6951008"
+    modCompileOnly "curse.maven:cobbledollars-859232:6604561"
+    modCompileOnly "maven.modrinth:jade:$rootProject.jade_version+neoforge"
     modImplementation "software.bernie.geckolib:geckolib-common-$rootProject.geckolib_version"
 
     include(modApi "me.shedaniel.cloth:cloth-config:$rootProject.cloth_config_version")
