--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     modRuntimeOnly "maven.modrinth:jade:$rootProject.jade_version+fabric"
     modRuntimeOnly "dev.emi:trinkets:3.10.0"
     modImplementation "curse.maven:cobblemon-mega-showdown-1189523:6951008"
+    modImplementation "curse.maven:cobbledollars-859232:6604561"
     modRuntimeOnly "maven.modrinth:supermartijn642s-config-lib:1.1.8-fabric-mc1.21"
     modCompileOnly "curse.maven:distant-horizons-508933:6791190"
 
