--- a/common/build.gradle
+++ b/common/build.gradle
@@ -22,13 +22,13 @@ repositories {
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
     modImplementation "com.cobblemon:mod:$rootProject.cobblemon_version"
-    implementation(files "../lib/common/molang-1.1.19.jar")
+    implementation(files "libs/molang-1.1.19.jar")
     modCompileOnly "com.terraformersmc:modmenu:11.0.3"
     modCompileOnly "curse.maven:cobblemon-mega-showdown-1189523:6951008"
     modCompileOnly "curse.maven:cobbledollars-859232:6604561"
     modCompileOnly "maven.modrinth:jade:$rootProject.jade_version+neoforge"
     modImplementation "software.bernie.geckolib:geckolib-common-$rootProject.geckolib_version"
-    modCompileOnly(files "../lib/common/CobblemonSizeVariationFabric-1.2.0+1.6.1.jar")
+    modCompileOnly(files "libs/CobblemonSizeVariationFabric-1.2.0+1.6.1.jar")
 
     include(modApi "me.shedaniel.cloth:cloth-config:$rootProject.cloth_config_version")
 }
