--- a/gradle.properties
+++ b/gradle.properties
@@ -12,14 +12,14 @@ enabled_platforms=fabric,neoforge
 minecraft_version=1.21.1
 
 # Dependencies
-fabric_loader_version=0.16.14
-fabric_api_version=0.116.4+1.21.1
+fabric_loader_version=0.17.2
+fabric_api_version=0.116.6+1.21.1
 fabric_kotlin=1.13.5+kotlin.2.2.10
 
 neoforge_version=21.1.130
 kotlin_for_forge_version=5.3.0
 
-cobblemon_version=1.6.1+1.21.1
+cobblemon_version=1.7.0+1.21.1-SNAPSHOT
 molang_version=1.1.19
 cloth_config_version=15.0.140
 jade_version=15.10.0
