--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 display_name=Cobblemon Raid Dens
 mod_description=Introduces raid dens to Minecraft!
 archives_name=cobblemonraiddens
-mod_version=0.4.7+1.21.1
+mod_version=0.4.7+1.21.1+1.7
 maven_group=com.necro.raid.dens
 enabled_platforms=fabric,neoforge
 
