--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ subprojects {
                 includeGroup("software.bernie.geckolib")
             }
         }
+        maven { url 'https://maven.wispforest.io/releases' }
+        maven { url 'https://maven.su5ed.dev/releases' }
     }
 
     dependencies {
