--- a/common/build.gradle
+++ b/common/build.gradle
@@ -24,12 +24,14 @@ dependencies {
     modImplementation "com.cobblemon:mod:$rootProject.cobblemon_version"
     implementation(files "libs/molang-1.1.19.jar")
     modCompileOnly "com.terraformersmc:modmenu:11.0.3"
-    modCompileOnly "curse.maven:cobblemon-mega-showdown-1189523:6951008"
+    modRuntimeOnly "io.wispforest:accessories-common:1.1.0-beta.52+1.21.1"
+    modCompileOnly "curse.maven:cobblemon-mega-showdown-1189523:7260211"
     modCompileOnly "curse.maven:cobbledollars-859232:6604561"
     modCompileOnly "maven.modrinth:jade:$rootProject.jade_version+neoforge"
     modImplementation "software.bernie.geckolib:geckolib-common-$rootProject.geckolib_version"
-    modCompileOnly(files "libs/CobblemonSizeVariationFabric-1.2.0+1.6.1.jar")
-    modCompileOnly "curse.maven:radical-cobblemon-trainers-api-1152792:6734353"
+    modCompileOnly(files "libs/CobblemonSizeVariationFabric-1.4.0+1.7.0.jar")
+    modCompileOnly "curse.maven:radical-cobblemon-trainers-api-1152792:7257752"
+    modCompileOnly "dev.architectury:architectury:13.0.8"
 
     include(modApi "me.shedaniel.cloth:cloth-config:$rootProject.cloth_config_version")
 }
