--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 display_name=Cobblemon Raid Dens
 mod_description=Introduces raid dens to Minecraft!
 archives_name=cobblemonraiddens
-mod_version=0.4.7+1.21.1+1.7
+mod_version=0.5.0+1.21.1
 maven_group=com.necro.raid.dens
 enabled_platforms=fabric,neoforge
 
@@ -19,7 +19,7 @@ fabric_kotlin=1.13.5+kotlin.2.2.10
 neoforge_version=21.1.130
 kotlin_for_forge_version=5.3.0
 
-cobblemon_version=1.7.0+1.21.1-SNAPSHOT
+cobblemon_version=1.7.0+1.21.1
 molang_version=1.1.19
 cloth_config_version=15.0.140
 jade_version=15.10.0
