--- a/fabricdatagen/build.gradle
+++ b/fabricdatagen/build.gradle
@@ -60,9 +60,10 @@ dependencies {
     modImplementation "software.bernie.geckolib:geckolib-fabric-$rootProject.geckolib_version"
     include(modApi "me.shedaniel.cloth:cloth-config-fabric:$rootProject.cloth_config_version")
     modRuntimeOnly "io.wispforest:accessories-fabric:1.1.0-beta.52+1.21.1"
-    modImplementation "curse.maven:cobblemon-mega-showdown-1189523:6951008"
+    modImplementation "curse.maven:cobblemon-mega-showdown-1189523:7260211"
     modCompileOnly "curse.maven:cobbledollars-859232:6604561"
     modImplementation "maven.modrinth:supermartijn642s-config-lib:1.1.8-fabric-mc1.21"
+    modImplementation "dev.architectury:architectury-fabric:13.0.8"
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
