--- a/common/src/main/resources/data/cobblemonraiddens/raid/boss/sneasel_hisuian.json
+++ b/common/src/main/resources/data/cobblemonraiddens/raid/boss/sneasel_hisuian.json
@@ -6,15 +6,15 @@
             "poisonjab",
             "metalclaw",
             "quickattack"
+        ],
+        "custom_properties": [
+            {
+                "name": "hisuian",
+                "value": true
+            }
         ]
     },
     "raid_tier": "TIER_FOUR",
     "raid_type": "FIGHTING",
-    "weight": 20.0,
-    "base_form": [
-        {
-            "name": "hisuian",
-            "value": true
-        }
-    ]
+    "weight": 20.0
 }
