--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -51,6 +51,8 @@ dependencies {
 
     modImplementation "com.terraformersmc:modmenu:11.0.3"
     modRuntimeOnly "maven.modrinth:jade:$rootProject.jade_version+fabric"
+    // modRuntimeOnly "lol.bai:badpackets:fabric-$rootProject.badpackets_version"
+    // modRuntimeOnly "mcp.mobius.waila:wthit:fabric-$rootProject.wthit_version"
     modRuntimeOnly "io.wispforest:accessories-fabric:1.1.0-beta.52+1.21.1"
     modImplementation "curse.maven:cobblemon-mega-showdown-1189523:7523096"
     modImplementation "curse.maven:cobbledollars-859232:6604561"
