--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,8 @@ cobblemon_version=1.7.2+1.21.1
 molang_version=1.1.19
 cloth_config_version=15.0.140
 jade_version=15.10.0
+badpackets_version=0.8.2
+wthit_version=12.10.0
 geckolib_version=1.21.1:4.7.7
 
 # Mod Required Dependencies
