--- a/fabricdatagen/build.gradle
+++ b/fabricdatagen/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     modImplementation "com.cobblemon:fabric:$rootProject.cobblemon_version"
     modImplementation "software.bernie.geckolib:geckolib-fabric-$rootProject.geckolib_version"
     include(modApi "me.shedaniel.cloth:cloth-config-fabric:$rootProject.cloth_config_version")
+    modCompileOnly "mcp.mobius.waila:wthit:fabric-$rootProject.wthit_version"
     modRuntimeOnly "io.wispforest:accessories-fabric:1.1.0-beta.52+1.21.1"
     modImplementation "curse.maven:cobblemon-mega-showdown-1189523:7523096"
     modCompileOnly "curse.maven:cobbledollars-859232:6604561"
