--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     modImplementation "com.terraformersmc:modmenu:11.0.3"
     modRuntimeOnly "maven.modrinth:jade:$rootProject.jade_version+fabric"
     // modRuntimeOnly "lol.bai:badpackets:fabric-$rootProject.badpackets_version"
+    runtimeOnly("org.reflections:reflections:0.10.2")
+    runtimeOnly("org.javassist:javassist:3.29.2-GA")
+    modRuntimeOnly "curse.maven:yungs-api-fabric-421649:6715461"
     modCompileOnly "mcp.mobius.waila:wthit:fabric-$rootProject.wthit_version"
     modRuntimeOnly "io.wispforest:accessories-fabric:1.1.0-beta.52+1.21.1"
     modImplementation "curse.maven:cobblemon-mega-showdown-1189523:7575682"
