--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     runtimeOnly("org.reflections:reflections:0.10.2")
     runtimeOnly("org.javassist:javassist:3.29.2-GA")
     modRuntimeOnly "curse.maven:yungs-api-fabric-421649:6715461"
+    modRuntimeOnly "curse.maven:worldedit-225608:5830452"
     modCompileOnly "mcp.mobius.waila:wthit:fabric-$rootProject.wthit_version"
     modRuntimeOnly "io.wispforest:accessories-fabric:1.1.0-beta.52+1.21.1"
     modImplementation "curse.maven:cobblemon-mega-showdown-1189523:7575682"
