Fixed crash with carpet mod on servers

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     modRuntimeOnly "maven.modrinth:supermartijn642s-config-lib:1.1.8-fabric-mc1.21"
     modImplementation "curse.maven:radical-cobblemon-trainers-api-1152792:7257754"
     modRuntimeOnly "dev.architectury:architectury-fabric:13.0.8"
+    modImplementation "curse.maven:carpet-349239:5425253"
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
